adding br tag and underline

--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
 </head>
 <body>
 
-<h1>Welcome to Student Learning Website</h1>
+<h1><u>Welcome to Student Learning Website</u></h1>
 
 <p>This website is created for students to learn coding basics.</p>
 
-<a href="signup.html">Signup</a> |
-<a href="topics.html">Topics</a> |
-<a href="videos.html">Coding Videos</a>
+<a href="signup.html">Signup</a><br>
+<a href="topics.html">Topics</a><br>
+<a href="videos.html">Coding Videos</a><br>
 
-<hr>
 
-<h2>Topics Covered</h2>
+<h2> <u>Topics Covered</u></h2>
 
 <table border="1">
     <tr>
